# BLACKED_hole

./: .gitignore  CMakeLists.txt  README.md  todo.md  watch_project.sh
include/: blackHole.hpp  constants.hpp  graphics.hpp  input.hpp  particle.hpp  photon.hpp  physics.hpp
include/2d/: BlackHole.hpp  photon.hpp
include/3d/: BlackHole.hpp  BlackHole3d.hpp  Constants.hpp  InputHandler.hpp  Photon.hpp  RayTracer.hpp  Renderer.hpp  Simulation.hpp  graphics3d.hpp  input3d.hpp  particle3d.hpp  photon3d.hpp  physics3d.hpp
src/: graphics.cpp  input.cpp  main.cpp  physics.cpp
src/2d/: graphics.cpp  input.cpp  main.cpp  physics.cpp
src/3d/: Inputhandler.cpp  RayTracer.cpp  Renderer.cpp  Simulation.cpp  graphics.cpp  input.cpp  main.cpp  physics.cpp
